// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmotionPicker > renders correctly 1`] = `
<fieldset
  aria-label="Ce champ ne sera plus modifiable après saisie"
  class="sy-emotion-picker"
>
  <legend class="
    mb-6
    text-h6
  ">
    Pourriez-vous donner une note ?
  </legend>
  <div
    class="
      d-flex
      max-width-none
      mx-n1
      mx-sm-n2
    "
    role="radiogroup"
  >
    <div
      class="
        mx-1
        mx-sm-2
        px-1
        px-sm-4
        rounded-lg
        sad
        sy-emotion-picker__item
      "
      role="radio"
      style="
        min-height: 88px;
        min-width: 88px;
      "
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="
          0
          0
          0
          0
          0
          0
          0
          0
          0,0
          0,0
          0,0
          0,0
          0,1
          0,1
          0,1
          0,1
          10,8.7
          10,9.5M12,14C13.75,14
          10.25,14
          12,14Z
          12,16C10.75,16
          12,20A8,8
          12,22A10,10
          12,2A10,10
          12,4A8,8
          13.25,16
          14,10.3
          14,9.5C14,8.7
          14.7,8
          15.29,14.72
          15.5,11C14.7,11
          15.5,8M10,9.5C10,10.3
          16.19,15.81L14.77,17.23C14.32,16.5
          16.3,11
          17,8.7
          17,9.5C17,10.3
          2,12A10,10
          20,12M22,12A10,10
          22,12M15.5,8C16.3,8
          4,12A8,8
          7,10.3
          7,9.5C7,8.7
          7.7,8
          8.5,11C7.7,11
          8.5,8C9.3,8
          9.23,17.23L7.81,15.81C8.71,14.72
          9.3,11
          9.68,16.5
          M20,12A8,8
          mdi
          notranslate
          pa-0
          text-currentColor
          v-icon
          v-theme--light
        "
        style="
          font-size: 40px;
          height: 40px;
          width: 40px;
        "
      ></i>
      <span class="
        mt-1
        sy-emotion-picker__item-title
      ">
        Pas du tout
      </span>
    </div>
    <div
      class="
        mx-1
        mx-sm-2
        neutral
        px-1
        px-sm-4
        rounded-lg
        sy-emotion-picker__item
      "
      role="radio"
      style="
        min-height: 88px;
        min-width: 88px;
      "
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="
          0
          0
          0
          0
          0
          0
          0
          0
          0
          0
          0
          0
          0
          0
          0
          0
          0,0
          0,0
          0,0
          0,0
          0,1
          0,1
          0,1
          0,1
          0,1
          0,1
          0,1
          0,1
          0,1
          0,1
          0,1
          0,1
          10,9.5A1.5,1.5
          12,20M8.5,11A1.5,1.5
          12,22A10,10
          12,2M12,20A8,8
          12,4A8,8
          14,9.5A1.5,1.5
          15.5,11A1.5,1.5
          15.5,8A1.5,1.5
          17,9.5M16,14V16H8V14H16Z
          2,12A10,10
          20,12A8,8
          22,12A10,10
          4,12A8,8
          7,9.5A1.5,1.5
          8.5,11M17,9.5A1.5,1.5
          8.5,8A1.5,1.5
          M12,2A10,10
          mdi
          notranslate
          pa-0
          text-currentColor
          v-icon
          v-theme--light
        "
        style="
          font-size: 40px;
          height: 40px;
          width: 40px;
        "
      ></i>
      <span class="
        mt-1
        sy-emotion-picker__item-title
      ">
        Peut-être
      </span>
    </div>
    <div
      class="
        happy
        mx-1
        mx-sm-2
        px-1
        px-sm-4
        rounded-lg
        sy-emotion-picker__item
      "
      role="radio"
      style="
        min-height: 88px;
        min-width: 88px;
      "
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="
          0
          0
          0
          0
          0
          0
          0
          0
          0,0
          0,0
          0,0
          0,0
          0,1
          0,1
          0,1
          0,1
          10,8.7
          10,9.5M17,9.5C17,10.3
          10.75,15.23
          12,15.23C13.25,15.23
          12,17.23Z
          12,20A8,8
          12,22A10,10
          12,2A10,10
          12,4A8,8
          13.75,17.23
          14,10.3
          14,9.5C14,8.7
          14.32,14.72
          14.7,8
          14.77,14L16.19,15.42C15.29,16.5
          15.5,11C14.7,11
          15.5,8C16.3,8
          16.3,11
          17,8.7
          17,9.5M12,17.23C10.25,17.23
          2,12A10,10
          20,12M22,12A10,10
          22,12M10,9.5C10,10.3
          4,12A8,8
          7,10.3
          7,9.5C7,8.7
          7.7,8
          7.81,15.42L9.23,14C9.68,14.72
          8.5,11C7.7,11
          8.5,8C9.3,8
          8.71,16.5
          9.3,11
          M20,12A8,8
          mdi
          notranslate
          pa-0
          text-currentColor
          v-icon
          v-theme--light
        "
        style="
          font-size: 40px;
          height: 40px;
          width: 40px;
        "
      ></i>
      <span class="
        mt-1
        sy-emotion-picker__item-title
      ">
        Oui super
      </span>
    </div>
  </div>
</fieldset>
`;

exports[`EmotionPicker > renders correctly with only 2 items 1`] = `
<fieldset
  aria-label="Ce champ ne sera plus modifiable après saisie"
  class="sy-emotion-picker"
>
  <legend class="
    mb-6
    text-h6
  ">
    Pourriez-vous donner une note ?
  </legend>
  <div
    class="
      d-flex
      max-width-none
      mx-n1
      mx-sm-n2
    "
    role="radiogroup"
  >
    <div
      class="
        mx-1
        mx-sm-2
        px-1
        px-sm-4
        rounded-lg
        sad
        sy-emotion-picker__item
      "
      role="radio"
      style="
        min-height: 88px;
        min-width: 88px;
      "
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="
          0
          0
          0
          0
          0
          0
          0
          0
          0,0
          0,0
          0,0
          0,0
          0,1
          0,1
          0,1
          0,1
          10,8.7
          10,9.5M12,14C13.75,14
          10.25,14
          12,14Z
          12,16C10.75,16
          12,20A8,8
          12,22A10,10
          12,2A10,10
          12,4A8,8
          13.25,16
          14,10.3
          14,9.5C14,8.7
          14.7,8
          15.29,14.72
          15.5,11C14.7,11
          15.5,8M10,9.5C10,10.3
          16.19,15.81L14.77,17.23C14.32,16.5
          16.3,11
          17,8.7
          17,9.5C17,10.3
          2,12A10,10
          20,12M22,12A10,10
          22,12M15.5,8C16.3,8
          4,12A8,8
          7,10.3
          7,9.5C7,8.7
          7.7,8
          8.5,11C7.7,11
          8.5,8C9.3,8
          9.23,17.23L7.81,15.81C8.71,14.72
          9.3,11
          9.68,16.5
          M20,12A8,8
          mdi
          notranslate
          pa-0
          text-currentColor
          v-icon
          v-theme--light
        "
        style="
          font-size: 40px;
          height: 40px;
          width: 40px;
        "
      ></i>
      <span class="
        mt-1
        sy-emotion-picker__item-title
      ">
        Pas du tout
      </span>
    </div>
    <div
      class="
        happy
        mx-1
        mx-sm-2
        px-1
        px-sm-4
        rounded-lg
        sy-emotion-picker__item
      "
      role="radio"
      style="
        min-height: 88px;
        min-width: 88px;
      "
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="
          0
          0
          0
          0
          0
          0
          0
          0
          0,0
          0,0
          0,0
          0,0
          0,1
          0,1
          0,1
          0,1
          10,8.7
          10,9.5M17,9.5C17,10.3
          10.75,15.23
          12,15.23C13.25,15.23
          12,17.23Z
          12,20A8,8
          12,22A10,10
          12,2A10,10
          12,4A8,8
          13.75,17.23
          14,10.3
          14,9.5C14,8.7
          14.32,14.72
          14.7,8
          14.77,14L16.19,15.42C15.29,16.5
          15.5,11C14.7,11
          15.5,8C16.3,8
          16.3,11
          17,8.7
          17,9.5M12,17.23C10.25,17.23
          2,12A10,10
          20,12M22,12A10,10
          22,12M10,9.5C10,10.3
          4,12A8,8
          7,10.3
          7,9.5C7,8.7
          7.7,8
          7.81,15.42L9.23,14C9.68,14.72
          8.5,11C7.7,11
          8.5,8C9.3,8
          8.71,16.5
          9.3,11
          M20,12A8,8
          mdi
          notranslate
          pa-0
          text-currentColor
          v-icon
          v-theme--light
        "
        style="
          font-size: 40px;
          height: 40px;
          width: 40px;
        "
      ></i>
      <span class="
        mt-1
        sy-emotion-picker__item-title
      ">
        Oui super
      </span>
    </div>
  </div>
</fieldset>
`;
